# SL

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: slc-ci.yml
docs/: compatibility.md  developer-preview.md  freeze-candidate.md  full-development-plan.md  lsp.md  release-checklist.md  release-process.md  roadmap.md  security-review.md  semantics.md  spec.md  v1-blockers.md  vision.md  vscode.md
docs/archive/: agent-governance.md  source-conversation.md
docs/migration/: v0_12_to_v0_13.md  v1_0_readiness.md
docs/site/: ai-assisted-development.md  app-kit.md  database.md  error-handling.md  index.md  intentspec.md  language-tour.md  quickstart.md  roadmap.md  testing.md  tooling.md  tutorial.md
editors/vscode/: README.md  extension.js  language-configuration.json  package.json
examples/: issue_tracker.sl  models.sl  notes.intent.yaml  notes_api.sl  todo.intent.yaml
examples/gallery/: README.md
playground/: __init__.py  index.html  server.py
scripts/: announcement.py  compat_check.py  cross_platform_smoke.py  docs_check.py  doctor_drift_smoke.py  example_matrix.py  freeze_check.py  package_smoke.py  release_check.py  release_notes.py  vscode_check.py
tests/: test_checker.py  test_cli.py  test_codegen.py  test_exit_codes.py  test_intent.py  test_lexer.py  test_lsp.py  test_parser.py  test_playground.py  test_release_check.py  test_v13_release_scripts.py  test_vscode.py
(+57 files in other folders)
