[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symboliclight"
version = "0.5.0"
description = "Spec-native, AI-friendly application language that compiles to Python."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "SymbolicLight Contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]
intentspec = [
  "intentspec>=0.1.0",
]

[project.scripts]
slc = "symboliclight.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
